Fixed mobile view cropping text

--- a/src/ui.sass
+++ b/src/ui.sass
@@ -678,6 +678,7 @@ body
         flex: 1 1 auto
         overflow: auto
         flex-wrap: nowrap
+        width: 100%
         height: 100%
         padding-top: 1em
         padding-right: 0.6em
